@@ -5,7 +5,7 @@
         <item>English</item>
         <item>Русский</item>
         <item>Deutsch</item>
-        <item>French</item>
+        <item>Français</item>
         <item>Italiano</item>
         <item>Español</item>
         <item>简体中文</item>
