@@ -1,13 +1,8 @@
 package ru.meefik.linuxdeploy;
 
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
-import java.io.Closeable;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
-import java.io.FileReader;
-import java.io.FileWriter;
 import java.io.IOException;
 import java.net.InetAddress;
 import java.net.NetworkInterface;
@@ -25,7 +20,8 @@ import java.util.Set;
 import android.annotation.SuppressLint;
 import android.content.Context;
 import android.content.SharedPreferences;
-import android.content.pm.PackageManager.NameNotFoundException;
+import android.content.pm.PackageInfo;
+import android.content.pm.PackageManager;
 import android.content.res.Configuration;
 import android.graphics.Point;
 import android.os.Build;
@@ -102,245 +98,141 @@ public class PrefStore {
 	public static final String APP_PREF_FILE_NAME = "app_settings";
 	public static final String PROFILES_FILE_NAME = "profiles";
 
-	// closeable helper
-	private static void close(Closeable c) {
-		if (c != null) {
-			try {
-				c.close();
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
-		}
-	}
-
-	// update deploy.conf
-	public static Boolean storeConfig() {
-		Boolean result = false;
-		String confFile = PrefStore.ENV_DIR + "/etc/deploy.conf";
-		List<String> lines = new ArrayList<>();
-		lines.add("DEBUG_MODE=\"" + DEBUG_MODE + "\"");
-		lines.add("TRACE_MODE=\"" + TRACE_MODE + "\"");
-		lines.add("MNT_TARGET=\"" + MNT_TARGET + "\"");
-		lines.add("IMG_TARGET=\"" + IMG_TARGET + "\"");
-		lines.add("IMG_SIZE=\"" + IMG_SIZE + "\"");
-		lines.add("FS_TYPE=\"" + FS_TYPE + "\"");
-		lines.add("DEPLOY_TYPE=\"" + DEPLOY_TYPE + "\"");
-		lines.add("DISTRIB=\"" + DISTRIB + "\"");
-		lines.add("ARCH=\"" + ARCH + "\"");
-		lines.add("SUITE=\"" + SUITE + "\"");
-		lines.add("MIRROR=\"" + MIRROR + "\"");
-		lines.add("USER_NAME=\"" + USER_NAME + "\"");
-		lines.add("USER_PASSWORD=\"" + USER_PASSWORD + "\"");
-		lines.add("SERVER_DNS=\"" + SERVER_DNS + "\"");
-		lines.add("LOCALE=\"" + LOCALE + "\"");
-		lines.add("DESKTOP_ENV=\"" + DESKTOP_ENV + "\"");
-		lines.add("USE_COMPONENTS=\"" + USE_COMPONENTS + "\"");
-		lines.add("STARTUP=\"" + STARTUP + "\"");
-		lines.add("CUSTOM_SCRIPTS=\"" + CUSTOM_SCRIPTS + "\"");
-		lines.add("CUSTOM_MOUNTS=\"" + CUSTOM_MOUNTS + "\"");
-		lines.add("SSH_PORT=\"" + SSH_PORT + "\"");
-		lines.add("VNC_DISPLAY=\"" + VNC_DISPLAY + "\"");
-		lines.add("VNC_DEPTH=\"" + VNC_DEPTH + "\"");
-		lines.add("VNC_DPI=\"" + VNC_DPI + "\"");
-		lines.add("VNC_GEOMETRY=\"" + VNC_GEOMETRY + "\"");
-		lines.add("VNC_ARGS=\"" + VNC_ARGS + "\"");
-		lines.add("XSERVER_DISPLAY=\"" + XSERVER_DISPLAY + "\"");
-		lines.add("XSERVER_HOST=\"" + XSERVER_HOST + "\"");
-		lines.add("FB_DISPLAY=\"" + FB_DISPLAY + "\"");
-		lines.add("FB_DPI=\"" + FB_DPI + "\"");
-		lines.add("FB_DEV=\"" + FB_DEV + "\"");
-		lines.add("FB_INPUT=\"" + FB_INPUT + "\"");
-		lines.add("FB_ARGS=\"" + FB_ARGS + "\"");
-		lines.add("FB_FREEZE=\"" + FB_FREEZE + "\"");
-		BufferedWriter bw = null;
-		try {
-			bw = new BufferedWriter(new FileWriter(confFile));
-			for (String s : lines) {
-				bw.write(s + "\n");
-			}
-			result = true;
-		} catch (Exception e) {
-			e.printStackTrace();
-		} finally {
-			close(bw);
-		}
-		return result;
-	}
-
-	// update version file
-	public static Boolean setVersion() {
-		Boolean result = false;
-		String f = PrefStore.ENV_DIR + "/etc/version";
-		BufferedWriter bw = null;
-		try {
-			bw = new BufferedWriter(new FileWriter(f));
-			bw.write(PrefStore.VERSION);
-			result = true;
-		} catch (IOException e) {
-			e.printStackTrace();
-		} finally {
-			close(bw);
-		}
-		return result;
-	}
-
-	// check latest version
-	public static Boolean isLatestVersion() {
-		Boolean result = false;
-		String f = PrefStore.ENV_DIR + "/etc/version";
-		BufferedReader br = null;
-		try {
-			br = new BufferedReader(new FileReader(f));
-			String line = br.readLine();
-			if (PrefStore.VERSION.equals(line))
-				result = true;
-		} catch (IOException e) {
-			e.printStackTrace();
-		} finally {
-			close(br);
-		}
-		return result;
-	}
-
 	// get preferences
 	public static void get(Context c) {
-		EXTERNAL_STORAGE = Environment.getExternalStorageDirectory()
-				.getAbsolutePath();
+		EXTERNAL_STORAGE = Environment.getExternalStorageDirectory().getAbsolutePath();
+		MARCH = getArch(System.getProperty("os.arch"));
+		VERSION = getVersion(c);
 
-		SharedPreferences sp = c.getSharedPreferences(APP_PREF_FILE_NAME,
-				Context.MODE_PRIVATE);
+		SharedPreferences pref = c.getSharedPreferences(APP_PREF_FILE_NAME, Context.MODE_PRIVATE);
+		SharedPreferences.Editor editor = pref.edit();
 
-		SharedPreferences.Editor prefEditor = sp.edit();
-
-		SCREEN_LOCK = sp.getBoolean("screenlock",
+		SCREEN_LOCK = pref.getBoolean("screenlock",
 				c.getString(R.string.screenlock).equals("true"));
-		WIFI_LOCK = sp.getBoolean("wifilock", c.getString(R.string.wifilock)
+		WIFI_LOCK = pref.getBoolean("wifilock", c.getString(R.string.wifilock)
 				.equals("true"));
-		FONT_SIZE = Integer.parseInt(sp.getString("fontsize",
+		FONT_SIZE = Integer.parseInt(pref.getString("fontsize",
 				c.getString(R.string.fontsize)));
-		MAX_LINE = Integer.parseInt(sp.getString("maxline",
+		MAX_LINE = Integer.parseInt(pref.getString("maxline",
 				c.getString(R.string.maxline)));
-		LANGUAGE = sp.getString("language", c.getString(R.string.language));
-		THEME = sp.getString("theme", c.getString(R.string.theme));
+		LANGUAGE = pref.getString("language", c.getString(R.string.language));
+		if (LANGUAGE.isEmpty()) {
+			LANGUAGE = getDefaultLanguage(c);
+			editor.putString("language", LANGUAGE);
+		}
+		THEME = pref.getString("theme", c.getString(R.string.theme));
 
-		ENV_DIR = sp.getString("installdir", c.getString(R.string.installdir));
-		if (ENV_DIR.isEmpty())
+		ENV_DIR = pref.getString("installdir", c.getString(R.string.installdir));
+		if (ENV_DIR.isEmpty()) {
 			ENV_DIR = c.getApplicationInfo().dataDir + "/linux";
-		prefEditor.putString("installdir", ENV_DIR);
+			editor.putString("installdir", ENV_DIR);
+		}
 
-		BUILTIN_SHELL = sp.getBoolean("builtinshell",
+		BUILTIN_SHELL = pref.getBoolean("builtinshell",
 				c.getString(R.string.builtinshell).equals("true"));
 		if (BUILTIN_SHELL) {
 			SHELL = ENV_DIR + "/bin/ash";
 		} else {
 			SHELL = "/system/xbin/ash";
 		}
-		SYMLINK = sp.getBoolean("symlink", c.getString(R.string.symlink)
-				.equals("true"));
-		CURRENT_PROFILE = sp.getString("profile", null);
-		if (CURRENT_PROFILE == null)
+		SYMLINK = pref.getBoolean("symlink", c.getString(R.string.symlink).equals("true"));
+		CURRENT_PROFILE = pref.getString("profile", null);
+		if (CURRENT_PROFILE == null) {
 			setCurrentProfile(c, String.valueOf(System.currentTimeMillis()));
+		}
 
-		DEBUG_MODE = sp.getBoolean("debug",
+		DEBUG_MODE = pref.getBoolean("debug",
 				c.getString(R.string.debug).equals("true")) ? "y"
 				: "n";
-		TRACE_MODE = sp.getBoolean("debug",
+		TRACE_MODE = pref.getBoolean("debug",
 				c.getString(R.string.debug).equals("true"))
-				&& sp.getBoolean("trace",
+				&& pref.getBoolean("trace",
 						c.getString(R.string.trace).equals("true")) ? "y" : "n";
-		LOGGING = sp.getBoolean("logs",
+		LOGGING = pref.getBoolean("logs",
 				c.getString(R.string.logs).equals("true"));
-		LOG_FILE = sp.getString("logfile", EXTERNAL_STORAGE
-				+ "/linuxdeploy.log");
+		LOG_FILE = pref.getString("logfile", c.getString(R.string.logfile));
+		if (LOG_FILE.isEmpty()) {
+			LOG_FILE = EXTERNAL_STORAGE + "/linuxdeploy.log";
+			editor.putString("logfile", LOG_FILE);
+		}
 
-		prefEditor.commit();
+		editor.commit();
 
-		sp = c.getSharedPreferences(CURRENT_PROFILE, Context.MODE_PRIVATE);
-		prefEditor = sp.edit();
+		pref = c.getSharedPreferences(CURRENT_PROFILE, Context.MODE_PRIVATE);
+		editor = pref.edit();
 
-		MNT_TARGET = sp.getString("mountdir", c.getString(R.string.mountdir));
-		IMG_TARGET = sp.getString("diskimage", EXTERNAL_STORAGE + "/linux.img");
-		DEPLOY_TYPE = sp.getString("deploytype",
-				c.getString(R.string.deploytype));
-		IMG_SIZE = sp.getString("disksize", c.getString(R.string.disksize));
-		FS_TYPE = sp.getString("fstype", c.getString(R.string.fstype));
-		DISTRIB = sp.getString("distribution",
-				c.getString(R.string.distribution));
-		SUITE = sp.getString("suite", c.getString(R.string.suite));
-		MIRROR = sp.getString("mirror", c.getString(R.string.mirror));
-		ARCH = sp.getString("architecture", c.getString(R.string.architecture));
-		USER_NAME = sp.getString("username", c.getString(R.string.username))
+		MNT_TARGET = pref.getString("mountdir", c.getString(R.string.mountdir));
+		IMG_TARGET = pref.getString("diskimage", c.getString(R.string.diskimage));
+		if (IMG_TARGET.isEmpty()) {
+			IMG_TARGET = EXTERNAL_STORAGE + "/linux.img";
+			editor.putString("diskimage", IMG_TARGET);
+		}
+		DEPLOY_TYPE = pref.getString("deploytype", c.getString(R.string.deploytype));
+		IMG_SIZE = pref.getString("disksize", c.getString(R.string.disksize));
+		FS_TYPE = pref.getString("fstype", c.getString(R.string.fstype));
+		DISTRIB = pref.getString("distribution", c.getString(R.string.distribution));
+		SUITE = pref.getString("suite", c.getString(R.string.suite));
+		MIRROR = pref.getString("mirror", c.getString(R.string.mirror));
+		ARCH = pref.getString("architecture", c.getString(R.string.architecture));
+		USER_NAME = pref.getString("username", c.getString(R.string.username))
 				.toLowerCase(Locale.ENGLISH);
-		USER_PASSWORD = sp
+		USER_PASSWORD = pref
 				.getString("password", c.getString(R.string.password))
 				.toLowerCase(Locale.ENGLISH);
-		SERVER_DNS = sp.getString("serverdns", c.getString(R.string.serverdns));
-		LOCALE = sp.getString("locale", c.getString(R.string.locale));
-		DESKTOP_ENV = sp.getString("desktopenv",
-				c.getString(R.string.desktopenv));
+		SERVER_DNS = pref.getString("serverdns", c.getString(R.string.serverdns));
+		LOCALE = pref.getString("locale", c.getString(R.string.locale));
+		DESKTOP_ENV = pref.getString("desktopenv", c.getString(R.string.desktopenv));
 		Set<String> defcomp = new HashSet<String>(Arrays.asList(c
 				.getResources().getStringArray(R.array.default_components)));
-		if (!sp.contains("xcomponents")) {
+		if (!pref.contains("xcomponents")) {
 			// set default components
-			SharedPreferenceCompat.EditorCompat.putStringSet(prefEditor,
+			SharedPreferenceCompat.EditorCompat.putStringSet(editor,
 					"xcomponents", defcomp);
 		}
-		Set<String> comp_set = SharedPreferenceCompat.getStringSet(sp,
+		Set<String> comp_set = SharedPreferenceCompat.getStringSet(pref,
 				"xcomponents", defcomp);
 		String components = "";
 		for (String str : comp_set) {
 			components += str + " ";
 		}
 		USE_COMPONENTS = components.trim();
-		String startup_ssh = sp.getBoolean("sshstartup",
+		String startup_ssh = pref.getBoolean("sshstartup",
 				c.getString(R.string.sshstartup).equals("true")) ? "ssh"
 				: "";
-		String startup_gui = sp.getBoolean("guistartup",
-				c.getString(R.string.guistartup).equals("true")) ? sp
+		String startup_gui = pref.getBoolean("guistartup",
+				c.getString(R.string.guistartup).equals("true")) ? pref
 				.getString("guitype", c.getString(R.string.guitype)) : "";
-		String startup_custom = sp.getBoolean("customstartup",
+		String startup_custom = pref.getBoolean("customstartup",
 				c.getString(R.string.customstartup).equals("true")) ? "custom" : "";
 		STARTUP = (startup_ssh + " " + startup_gui + " " + startup_custom)
 				.trim();
-		CUSTOM_SCRIPTS = sp.getBoolean("customstartup",
-				c.getString(R.string.customstartup).equals("true")) ? sp.getString("scripts",
+		CUSTOM_SCRIPTS = pref.getBoolean("customstartup",
+				c.getString(R.string.customstartup).equals("true")) ? pref.getString("scripts",
 				c.getString(R.string.scripts)).trim() : "";
-		CUSTOM_MOUNTS = sp
+		CUSTOM_MOUNTS = pref
 				.getBoolean("custommounts", c.getString(R.string.custommount)
-						.equals("true")) ? sp.getString(
+						.equals("true")) ? pref.getString(
 				"mounts", EXTERNAL_STORAGE).trim() : "";
-		SSH_PORT = sp.getString("sshport", c.getString(R.string.sshport));
-		VNC_DISPLAY = sp.getString("vncdisplay",
+		SSH_PORT = pref.getString("sshport", c.getString(R.string.sshport));
+		VNC_DISPLAY = pref.getString("vncdisplay",
 				c.getString(R.string.vncdisplay));
-		VNC_DEPTH = sp.getString("vncdepth", c.getString(R.string.vncdepth));
-		VNC_DPI = sp.getString("vncdpi", c.getString(R.string.vncdpi));
-		VNC_GEOMETRY = sp.getString("vncwidth", String.valueOf(getWidth(c)))
-				+ "x" + sp.getString("vncheight", String.valueOf(getHeight(c)));
-		VNC_ARGS = sp.getString("vncargs", c.getString(R.string.vncargs));
-		XSERVER_DISPLAY = sp.getString("xdisplay",
+		VNC_DEPTH = pref.getString("vncdepth", c.getString(R.string.vncdepth));
+		VNC_DPI = pref.getString("vncdpi", c.getString(R.string.vncdpi));
+		VNC_GEOMETRY = pref.getString("vncwidth", String.valueOf(getWidth(c)))
+				+ "x" + pref.getString("vncheight", String.valueOf(getHeight(c)));
+		VNC_ARGS = pref.getString("vncargs", c.getString(R.string.vncargs));
+		XSERVER_DISPLAY = pref.getString("xdisplay",
 				c.getString(R.string.xdisplay));
-		XSERVER_HOST = sp.getString("xhost", c.getString(R.string.xhost));
-		XSERVER_XSDL = sp.getBoolean("xserverxsdl", c.getString(R.string.xserverxsdl).equals("true"));
-		FB_DISPLAY = sp.getString("fbdisplay", c.getString(R.string.fbdisplay));
-		FB_DPI = sp.getString("fbdpi", c.getString(R.string.fbdpi));
-		FB_DEV = sp.getString("fbdev", c.getString(R.string.fbdev));
-		FB_INPUT = sp.getString("fbinput", c.getString(R.string.fbinput));
-		FB_ARGS = sp.getString("fbargs", c.getString(R.string.fbargs));
-		FB_FREEZE = sp.getString("fbfreeze", c.getString(R.string.fbfreeze));
+		XSERVER_HOST = pref.getString("xhost", c.getString(R.string.xhost));
+		XSERVER_XSDL = pref.getBoolean("xserverxsdl", c.getString(R.string.xserverxsdl).equals("true"));
+		FB_DISPLAY = pref.getString("fbdisplay", c.getString(R.string.fbdisplay));
+		FB_DPI = pref.getString("fbdpi", c.getString(R.string.fbdpi));
+		FB_DEV = pref.getString("fbdev", c.getString(R.string.fbdev));
+		FB_INPUT = pref.getString("fbinput", c.getString(R.string.fbinput));
+		FB_ARGS = pref.getString("fbargs", c.getString(R.string.fbargs));
+		FB_FREEZE = pref.getString("fbfreeze", c.getString(R.string.fbfreeze));
 
-		prefEditor.commit();
-
-		MARCH = getArch(System.getProperty("os.arch"));
-
-		try {
-			VERSION = c.getPackageManager().getPackageInfo(c.getPackageName(),
-					0).versionName
-					+ "-"
-					+ String.valueOf(c.getPackageManager().getPackageInfo(
-							c.getPackageName(), 0).versionCode);
-		} catch (NameNotFoundException e) {
-			e.printStackTrace();
-		}
+		editor.commit();
 	}
 
 	public static String getArch(String arch) {
@@ -604,9 +496,11 @@ public class PrefStore {
 
 	// multilanguage support
 	public static void updateLocale(Context c) {
-		SharedPreferences sp = c.getSharedPreferences(APP_PREF_FILE_NAME,
-				Context.MODE_PRIVATE);
-		LANGUAGE = sp.getString("language", c.getString(R.string.language));
+		SharedPreferences pref = c.getSharedPreferences(APP_PREF_FILE_NAME, Context.MODE_PRIVATE);
+		LANGUAGE = pref.getString("language", c.getString(R.string.language));
+		if (LANGUAGE.isEmpty()) {
+			LANGUAGE = getDefaultLanguage(c);
+		}
 		Locale locale = new Locale(LANGUAGE);
 		Locale.setDefault(locale);
 		Configuration config = new Configuration();
@@ -617,16 +511,16 @@ public class PrefStore {
 
 	// themes support
 	public static void updateTheme(Context c) {
-		SharedPreferences sp = c.getSharedPreferences(APP_PREF_FILE_NAME,
-				Context.MODE_PRIVATE);
-		THEME = sp.getString("theme", c.getString(R.string.theme));
-
-		if (THEME
-				.equals(c.getResources().getStringArray(R.array.theme_values)[0]))
+		SharedPreferences pref = c.getSharedPreferences(APP_PREF_FILE_NAME, Context.MODE_PRIVATE);
+		THEME = pref.getString("theme", c.getString(R.string.theme));
+		switch (THEME) {
+		case "dark":
 			c.setTheme(R.style.BlackTheme);
-		if (THEME
-				.equals(c.getResources().getStringArray(R.array.theme_values)[1]))
+			break;
+		case "light":
 			c.setTheme(R.style.LightTheme);
+			break;
+		}
 	}
 
 	public static int getResourceId(Context c, String variableName,
@@ -638,5 +532,27 @@ public class PrefStore {
 			return -1;
 		}
 	}
-
+	
+    // application version
+    public static String getVersion(Context c) {
+        String version = "";
+        try {
+            PackageInfo pi = c.getPackageManager().getPackageInfo(c.getPackageName(), 0);
+            version = pi.versionName + "-" + pi.versionCode;
+        } catch (PackageManager.NameNotFoundException e) {
+            e.printStackTrace();
+        }
+        return version;
+    }
+    
+    public static String getDefaultLanguage(Context c) {
+        String countryCode = Locale.getDefault().getLanguage();
+        if (Arrays.asList(c.getResources().
+        		getStringArray(R.array.language_values)).
+            	contains(countryCode)) {
+            return countryCode;
+        } else {
+        	return "en";
+        }
+    }
 }
